style.css
/* ... */
#contacts-box {
	background-color: rgba(255, 192, 39, 0.8);
    position: relative;
    right: 20px;
    top: -15px;
  border-radius: 10px
}

.float-right {
    float: right;
}

.spacer {
    clear: both;

}
#contact {
    margin-bottom: 50px;
}
.contact-boxes-container {
    width: 66%;
    margin: 0 auto;
}
.contact-box-left {
    width: 250px;
    margin-top: -20px;
	float: left;
}
.contact-box-right {
  margin-top: -20px;
	float: right;
}
.spacer {
    clear: both;
}
.contact-box-center {
    width: 250px;
    height: 250px;
    margin: 0 auto;
    text-align: center;
}
/*adapted gallery*/
.pictures {
  display: grid;
  grid-template-areas:
          'img-1 img-2 img-3 img-4'
          'img-1 img-5 img-5 img-6';
  justify-content: center;
}
.pictures-img:nth-of-type(1) {
  grid-area: img-1;
}
.pictures-img:nth-of-type(2) {
  grid-area: img-2;
}
.pictures-img:nth-of-type(3) {
  grid-area: img-3;
}
.pictures-img:nth-of-type(4) {
  grid-area: img-4;
}
.pictures-img:nth-of-type(5) {
  grid-area: img-5;
}
.pictures-img:nth-of-type(6) {
  grid-area: img-6;
}
.pictures-img img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
@media only screen and (min-width: 991px) and (max-width: 1480px){
  .pictures {margin:0 20px;}
}
@media (max-width: 990px) {
  .pictures {margin:0 20px;}
  .pictures {
    grid-template-areas:
            'img-1 img-2 img-3'
            'img-1 img-5 img-5'
            'img-6 img-4 img-4';
  }
}
@media (max-width: 680px) {
.pictures {margin:0 20px;}
  .pictures {
    grid-template-areas:
            'img-2 img-1'
            'img-3 img-1'
            'img-4 img-4'
            'img-5 img-6';
  }
}
@media (max-width: 480px) {
  .pictures {
    grid-template-areas:
            'img-2 img-1'
            'img-3 img-1'
            'img-5 img-5'
            'img-4 img-4'
            'img-6 img-6';
  }
}
@media only screen and (min-width: 991px) and (max-width: 1480px){
  .pictures {margin:0 20px;}
}
/*header*/
    body {
      margin: 0;
      overflow-x: hidden;
     }
    header {
      width: 100%;
      display: table;
      background-color: #002e5b;
      margin-bottom: 0;
     
    }
    .container {
      width: 100%;
      padding-right: 15px;
      padding-left: 15px;
      margin-right: auto;
      margin-left: auto
    }
    .toggle-icon {
      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
      width: 30px;
      height: 30px;
      position: absolute;
    }
    @media (min-width: 1200px) {
      .container {
        max-width: 1140px
      }
    }
    #logo {
      float: left;
      font-size: 25px;
      text-transform: uppercase;
      color: #fffab2;
      font-weight: 600;
      text-decoration: none;
      padding: 11px 0
    }
    nav {
      width: auto;
      float: right;
      margin-top: 7px
    }
    nav ul {
      display: table;
      float: right;
      margin: 0;
      padding: 0
    }
    nav ul li {
      float: left;
      list-style-type: none
    }
    nav ul li:last-child {
      padding-right: 0
    }
    nav ul li a {
      color: #e4f2ff;
      font-size: 19px;
      padding: 7px 19px;
      display: inline-block;
      text-decoration: none
    }
    nav ul li a:hover {
      background-color: #143a06;
      color: #fff9c8;
      text-decoration: underline
    }
input[type=checkbox], label {
      display: none
    }
.active {
  text-decoration: underline;
}
@media only screen and (max-width: 980px) {
      header {
        padding: 20px 0
      }
      #logo {
        padding: 0
      }
      input[type=checkbox] {
        position: absolute;
        top: -9999px;
        left: -9999px;
        background: none
      }
      input[type=checkbox]:focus {
        background: none
      }
      label {
        float: right;
        display: inline-block;
        cursor: pointer;
        margin-right: 65px
      }
      input[type=checkbox]:checked~nav {
        display: block
      }
      nav {
        display: none;
        position: absolute;
        right: 0;
        top: 50px;
        background-color: #002e5b;
        padding: 0;
        z-index: 99
      }
      nav ul {
        width: auto
      }
      nav ul li {
        float: none;
        padding: 0;
        width: 100%;
        display: table
      }
      nav ul li a {
        color: #FFF;
        font-size: 15px;
        padding: 10px 20px;
        display: block;
        border-bottom: 1px solid rgba(225, 225, 225, 0.1)
      }
    }
@media only screen and (max-width: 360px) {
      label {
        padding: 5px 0
      }
      #logo {
        font-size: 20px
      }
      nav {
        top: 47px
      }
    }
/*form*/
    body {
      font-family: Arial, sans-serif;
      font-size: 16px;
      color: #000;
      
      
    }
    * {
      box-sizing: border-box;
    }
    .form {
      max-width: 320px;
      padding: 15px;
      background-color: #fff;
      margin-right: auto;
      margin-left: auto;
      margin-top: 20px;
      margin-bottom: 120px;
    }
    .input {
      display: block;
      width: 100%;
      padding: 8px 10px;
      margin-bottom: 10px;
      border: 1px solid #ccc;
      font-family: inherit;
      font-size: 16px;
    }
    .btn {
      display: block;
      width: 100%;
      padding: 8px 10px;
      border: 0;
      background-color: #1cbc11;
      cursor: pointer;
      font-family: inherit;
      font-size: 16px;
      color: #fff;
    }
    .btn:hover {
      background-color: #14a20a;
    }
    .signup {
      margin-top: 40px;
    }

